fixed "required" text being too small

--- a/style/add_task.css
+++ b/style/add_task.css
@@ -202,7 +202,7 @@ textarea.task-input {
 }
 
 .required-info {
-    font-size: 12px;
+    font-size: 16px;
     font-weight: 400;
     line-height: 120%;
     color: #ff3d00;
